修改了版本号

--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 	<h6>以后或许可能应该会整个暗夜模式的壁纸，一定会的！（咕咕咕）</h6>
 </body>
 <footer>
-  <p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v0.5 (Preview Release)</a></p>
+  <p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.0 (Stable)</a></p>
 </footer>
 </html>
