替换部分壁纸，把坑给填上了 (当前版本 v1.3)
- 暗夜模式替换了我认为很丑的图片
- 替换了暗夜模式720p的壁纸
- 修改了beta版本中部分的错别字
- 不出意外的常亮模式的进度还是咕了 （ai画图不靠谱 :3）
- 别问我v1.2在哪里，问就是我不到啊（忘了上传 :3）
- 提升系统流畅度，提高系统稳定性

--- a/beta.html
+++ b/beta.html
@@ -34,10 +34,12 @@
 </header>
 <div class="body">
 <div class="Notes">
-<h3>使用方法把图片的获取来源更改为</h3>
+<h3>常亮模式使用方法把图片的获取来源更改为</h3>
 <h3>https://api.demonsword.top/assets/background/picture.jpg</h3>
-<h3>这个是一个每天都会自动更新的二次元图片的图床（理论上,目前还在测试阶段）</h3>
-<h3>当前数据库只有7张图片，每天自动切换展示，有时间才添加更多的图片</h3>
+<h3>暗夜模式使用方法把图片的获取来源更改为 (目前暗夜模式还是处在beta的测试阶段，可能会有些问题)</h3>
+<h3>https://api.demonsword.top/assets/background/dark.jpg</h3>
+<h3>这个是一个每天都会自动更新的二次元图片的图床</h3>
+<h3>当前数据库只有7张图片，每天自动切换展示</h3>
 <h3>由于套了cloudflare cdn的缘故，图片的更新可能会有延迟</h3>
 <h5>虽然界面简陋但是还是可以将就着用的 :3 </h5>
 </div>
@@ -45,10 +47,10 @@
 <h3>以下是今天的图片</h3>
 <iframe src="https://api.demonsword.top/assets/background/picture.jpg"></iframe>
 <h3>以下是今天暗夜模式的图片</h3>
-<iframe src="https://api.demonsword.top/assets/background/picture-night.png"></iframe>
+<iframe src="https://api.demonsword.top/assets/background/dark.jpg"></iframe>
 </div>
 <footer>
-<p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.1.1 (Beta)</a></p>
+<p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.3 (Beta)</a></p>
 </footer>
 </body>
 </html>
