优化判断手机端和电脑端的逻辑 (当前版本 v1.5)
- 判断手机端和电脑端的逻辑全部重写，再也不会出现奇奇怪怪的css还没加载出来，但是网页已经加载出来的情况
-  对于960x540的图片还没时间弄，咕多一个版本(aka 继续咕)
- 下个版本的更新应该会把主页的css逻辑部分也重写 (aka 挖坑)

--- a/beta.html
+++ b/beta.html
@@ -8,14 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://api.demonsword.top/assets/web1/Montserrat.css" rel="stylesheet">
 <script src="https://api.demonsword.top/assets/web1/jquery-3.3.1.min.js"></script>
-<script>
-        if (screen.width <= 768) {
-            document.write('<link href="https://api.demonsword.top/assets/web1/pc.css" rel="stylesheet">');
-        }
-        else {
-            document.write('<link href="https://api.demonsword.top/assets/web1/mb.css" rel="stylesheet">');
-        }
-    </script>
+<link rel="stylesheet" type="text/css" href="https://api.demonsword.top/assets/web1/aio.css">
 </head>
 <body>
 <header>
@@ -50,7 +43,7 @@
 <iframe src="https://api.demonsword.top/assets/background/dark.jpg"></iframe>
 </div>
 <footer>
-<p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.3 (Beta)</a></p>
+<p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.5 (Beta)</a></p>
 </footer>
 </body>
 </html>
