--- a/stable.html
+++ b/stable.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,9 +13,9 @@
         href: ""
       });
       if (width >= 768) {
-        css_link.attr("href", "./assets/web1/style.css");
+        css_link.attr("href", "https://api.demonsword.top/assets/web1/v1%20(PC).css");
       } else {
-        css_link.attr("href", "./assets/web1/mobile.css");
+        css_link.attr("href", "https://api.demonsword.top/assets/web1/v1%20(Mobile).css");
       }
       $("head").append(css_link);
     });
@@ -37,50 +36,6 @@
 	<iframe src="./assets/background/picture.jpg"></iframe>
 </body>
 <footer>
-  <p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.1 (Stable Release)</a></p>
+  <p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.2 (Stable Release)</a></p>
 </footer>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-<head>
-  <title>每天更新图片的图床</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://api.demonsword.top/assets/web1/jquery-3.3.1.min.js"></script>
-  <script>
-    $(document).ready(function() {
-      var width = $(window).width();
-      var css_link = $("<link>", {
-        rel: "stylesheet",
-        type: "text/css",
-        href: ""
-      });
-      if (width >= 768) {
-        css_link.attr("href", "./assets/web1/style.css");
-      } else {
-        css_link.attr("href", "./assets/web1/mobile.css");
-      }
-      $("head").append(css_link);
-    });
-  </script>
-</head>
-<body>
-  <!--粪山代码，别崩-->
-  <div class="Notes">
-    <h3>使用方法把图片的获取来源更改为</h3>
-    <h3>https://api.demonsword.top/assets/background/picture.jpg</h3>
-    <h3>这个是一个每天都会自动更新的二次元图片的图床</h3>
-    <h3>当前数据库只有7张图片，每天自动切换展示，有时间才添加更多的图片</h3>
-    <h3>由于套了cloudflare cdn的缘故，图片的更新可能会有延迟</h3>
-    <h5>虽然界面简陋但是还是可以将就着用的 :3 </h5>
-</div>
-  <a href="https://api.demonsword.top/changelog.txt" id="changelog-link">点击这里查看changelog</a>
-	<h3>以下是今天的图片</h3>
-	<iframe src="./assets/background/picture.jpg"></iframe>
-	<h6>以后或许可能应该会整个暗夜模式的壁纸，一定会的！（咕咕咕）</h6>
-</body>
-<footer>
-  <p>Powered by Demonsword<br><a href="https://api.demonsword.top">当前版本 v1.0 (Stable Release)</a></p>
-</footer>
-</html>
->>>>>>> aa787f103d8e448969abd4e07d2c3c48feec0c7a
